# Baklava

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
doc/html/: _array_literal_expression_8h.html  _array_literal_expression_8h_source.html  _assignment_expression_8h.html  _assignment_expression_8h_source.html  _ast_8h.html  _ast_8h_source.html  _binary_expression_8h.html  _binary_expression_8h_source.html  _block_statement_8h.html  _block_statement_8h_source.html  _boolean_literal_expression_8h.html  _boolean_literal_expression_8h_source.html  _call_expression_8h.html  _call_expression_8h_source.html  _const_reassignment_8h.html  _const_reassignment_8h_source.html  _environment_8cpp.html  _environment_8h.html  _environment_8h_source.html  _error_code_8h.html  _error_code_8h_source.html  _error_message_argument_8h.html  _error_message_argument_8h_source.html  _error_messages_8h.html  _error_messages_8h_source.html  _error_printer_8cpp.html  _error_printer_8h.html  _error_printer_8h_source.html  _exception_helpers_8cpp.html  _exception_helpers_8h.html  _exception_helpers_8h_source.html  _expected_x_after_y_8h.html  _expected_x_after_y_8h_source.html  _expected_x_before_y_8h.html  _expected_x_before_y_8h_source.html  _expression_8h.html  _expression_8h_source.html  _expression_statement_8h.html  _expression_statement_8h_source.html  _function_declaration_statement_8h.html  (+251 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  (+85 more)
doc/latex/: _array_literal_expression_8h.tex  _array_literal_expression_8h_source.tex  _assignment_expression_8h.tex  _assignment_expression_8h_source.tex  _ast_8h.tex  _ast_8h_source.tex  _binary_expression_8h.tex  _binary_expression_8h_source.tex  _block_statement_8h.tex  _block_statement_8h_source.tex  _boolean_literal_expression_8h.tex  _boolean_literal_expression_8h_source.tex  _call_expression_8h.tex  _call_expression_8h_source.tex  _const_reassignment_8h.tex  _const_reassignment_8h_source.tex  _environment_8cpp.tex  _environment_8h.tex  _environment_8h_source.tex  _error_code_8h.tex  _error_code_8h_source.tex  _error_message_argument_8h.tex  _error_message_argument_8h_source.tex  _error_messages_8h.tex  _error_messages_8h_source.tex  _error_printer_8cpp.tex  _error_printer_8h.tex  _error_printer_8h_source.tex  _exception_helpers_8cpp.tex  _exception_helpers_8h.tex  _exception_helpers_8h_source.tex  _expected_x_after_y_8h.tex  _expected_x_after_y_8h_source.tex  _expected_x_before_y_8h.tex  _expected_x_before_y_8h_source.tex  _expression_8h.tex  _expression_8h_source.tex  _expression_statement_8h.tex  _expression_statement_8h_source.tex  _function_declaration_statement_8h.tex  (+207 more)
src/error/: ErrorCode.h  ErrorMessageArgument.h  ErrorMessages.h
src/error/exceptions/: ConstReassignment.h  ExceptionHelpers.cpp  ExceptionHelpers.h  IndexOutOfBounds.h  IndexingNonArray.h  InvalidArgumentCount.h  InvalidCall.h  NonIntegerIndex.h  RuntimeError.h  TooFewArguments.h  TooManyArguments.h  UndeclaredVariable.h  VariableRedeclaration.h  WrongBinaryOperandTypes.h  WrongTypeError.h
src/error/exceptions/parser/: ExpectedXAfterY.h  ExpectedXBeforeY.h  InvalidDefaultArgumentPosition.h  InvalidDefaultParameterPosition.h  InvalidDefaultParameterValue.h  InvalidLValue.h  InvalidReturnPosition.h  ParserError.h  SelfReferencingInitializer.h  UninitializedConst.h
src/error/printer/: ErrorPrinter.cpp  ErrorPrinter.h  isOutputANSICompatible.cpp
src/interpreter/: Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Object.cpp  Object.h  RuntimeValue.cpp  RuntimeValue.h
src/interpreter/controlFlowExceptions/: Return.h
src/interpreter/nativeFunctions/: BaseFunctions.cpp  BaseFunctions.h  NativeFunction.cpp  NativeFunction.h
src/interpreter/runtimeValues/: BooleanValue.h  NullValue.h  NumericValue.h  RuntimeValue.h  StringValue.h
src/lexer/: KeywordCombinations.h  Keywords.h  Lexer.cpp  Lexer.h  Token.h  TokenType.h
src/parser/: Parser.cpp  Parser.h  Resolver.cpp  Resolver.h
src/parser/ast/: Ast.h  PrettyPrint.cpp  PrettyPrint.h
src/parser/ast/expressions/: ArrayLiteralExpression.h  AssignmentExpression.h  BinaryExpression.h  BooleanLiteralExpression.h  CallExpression.h  (+10 more)
tests/: CMakeLists.txt  TestHelpers.cpp  TestHelpers.h
tests/benchmarks/: test.cpp
tests/environment/: EnvironmentTest.cpp
tests/interpreter/: InterpreterBinaryComparisonExpressionTest.cpp  InterpreterBinaryExpressionTest.cpp  InterpreterBinaryLogicalExpressionTest.cpp  InterpreterBlockStatementTest.cpp  InterpreterDefaultParameterTest.cpp  InterpreterForStatementTest.cpp  InterpreterFunctionTest.cpp  InterpreterGroupingExpressionTest.cpp  InterpreterIfStatementTest.cpp  InterpreterIndexAssignmentExpressionTest.cpp  InterpreterIndexingExpressionTest.cpp  InterpreterLiteralExpressionsTest.cpp  InterpreterUnaryExpressionsTest.cpp  InterpreterVariableTest.cpp  InterpreterWhileStatementTest.cpp  RuntimeValueStringificationTest.cpp  ValuePrintingTest.cpp
tests/lexer/: LexerKeywordToSymbolTest.cpp  LexerTest.cpp
tests/parser/: DefaultArgumentsTest.cpp  ParserAssignmentExpressionTest.cpp  ParserBinaryComparisonExpressionTest.cpp  ParserBinaryExpressionTest.cpp  ParserBlockStatementTest.cpp  ParserDefaultParameterTest.cpp  ParserForStatementTest.cpp  ParserFunctionCallTest.cpp  ParserFunctionDeclarationTest.cpp  ParserGroupingExpressionTest.cpp  ParserIfStatementTest.cpp  ParserIndexAssignmentExpressionTest.cpp  ParserIndexingOperatorTest.cpp  ParserLiteralTest.cpp  ParserLogicalExpressionTest.cpp  ParserTest.cpp  ParserUnaryExpressionTest.cpp  ParserVariableDeclarationTest.cpp  ParserVariableExpressionTest.cpp  ParserWhileStatementTest.cpp
(+10 files in other folders)
