project(tests)
add_subdirectory(lib/Catch2)

add_executable(tests ../src/error/printer/ErrorPrinter.cpp ../src/lexer/Lexer.cpp ../src/parser/Parser.cpp
        lexer/LexerTest.cpp
        parser/ParserLiteralTest.cpp
        parser/ParserTest.cpp
        parser/ParserUnaryExpressionTest.cpp
        TestHelpers.h
        parser/ParserBinaryExpressionTest.cpp
        ../src/interpreter/Interpreter.cpp
        ../src/interpreter/Interpreter.h
        interpreter/InterpreterUnaryExpressionsTest.cpp
        TestHelpers.cpp
        interpreter/InterpreterLiteralExpressionsTest.cpp
        ../src/error/exceptions/RuntimeError.h
        ../src/error/ErrorMessageArgument.h
        ../src/error/exceptions/WrongTypeError.h
        ../src/interpreter/RuntimeValue.cpp
        ../src/error/exceptions/ExceptionHelpers.cpp
        interpreter/InterpreterBinaryExpressionTest.cpp
        ../src/error/exceptions/WrongBinaryOperandTypes.h
        ../src/interpreter/Object.h
        ../src/interpreter/Object.cpp
        interpreter/InterpreterBinaryLogicalExpressionTest.cpp
        ../src/parser/ast/expressions/LogicalExpression.h
        parser/ParserLogicalExpressionTest.cpp
        parser/ParserBinaryComparisonExpressionTest.cpp
        interpreter/InterpreterBinaryComparisonExpressionTest.cpp
        ../src/error/exceptions/parser/ParserError.h
        ../src/error/exceptions/parser/ExpectedXBeforeY.h
        parser/ParserGroupingExpressionTest.cpp
        ../src/parser/ast/expressions/GroupingExpression.h
        interpreter/InterpreterGroupingExpressionTest.cpp
        ../src/parser/ast/statements/ExpressionStatement.h
        ../src/parser/ast/statements/PrintStatement.h
        ../src/parser/ast/expressions/VariableExpression.h
        ../src/parser/ast/statements/VarDeclarationStatement.h
        parser/ParserVariableDeclarationTest.cpp
        ../src/error/exceptions/parser/UninitializedConst.h
        ../src/interpreter/Environment.cpp
        ../src/interpreter/Environment.h
        ../src/parser/ast/expressions/AssignmentExpression.h
        ../src/error/exceptions/VariableRedeclaration.h
        ../src/error/exceptions/UndeclaredVariable.h
        ../src/error/exceptions/ConstReassignment.h
        environment/EnvironmentTest.cpp
)
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)