project(tests)
add_subdirectory(lib/Catch2)

add_definitions(-DDEBUG_TRACK_EXECUTION -DDEBUG_TRACK_PRINTING -DDEBUG_TRACK_ERRORS -DDEBUG_STRESS_GC)

add_executable(tests ../src/error/printer/ErrorPrinter.cpp ../src/lexer/Lexer.cpp ../src/parser/Parser.cpp
        lexer/LexerTest.cpp
        parser/ParserLiteralTest.cpp
        parser/ParserTest.cpp
        parser/ParserUnaryExpressionTest.cpp
        TestHelpers.h
        parser/ParserBinaryExpressionTest.cpp
        ../src/interpreter/Interpreter.cpp
        ../src/interpreter/Interpreter.h
        interpreter/InterpreterUnaryExpressionsTest.cpp
        TestHelpers.cpp
        interpreter/InterpreterLiteralExpressionsTest.cpp
        ../src/error/exceptions/RuntimeError.h
        ../src/error/ErrorMessageArgument.h
        ../src/error/exceptions/WrongTypeError.h
        ../src/interpreter/RuntimeValue.cpp
        ../src/error/exceptions/ExceptionHelpers.cpp
        interpreter/InterpreterBinaryExpressionTest.cpp
        ../src/error/exceptions/WrongBinaryOperandTypes.h
        ../src/interpreter/Object.h
        ../src/interpreter/Object.cpp
        interpreter/InterpreterBinaryLogicalExpressionTest.cpp
        ../src/parser/ast/expressions/LogicalExpression.h
        parser/ParserLogicalExpressionTest.cpp
        parser/ParserBinaryComparisonExpressionTest.cpp
        interpreter/InterpreterBinaryComparisonExpressionTest.cpp
        ../src/error/exceptions/parser/ParserError.h
        ../src/error/exceptions/parser/ExpectedXBeforeY.h
        parser/ParserGroupingExpressionTest.cpp
        ../src/parser/ast/expressions/GroupingExpression.h
        interpreter/InterpreterGroupingExpressionTest.cpp
        ../src/parser/ast/statements/ExpressionStatement.h
        ../src/parser/ast/statements/PrintStatement.h
        ../src/parser/ast/expressions/VariableExpression.h
        ../src/parser/ast/statements/VarDeclarationStatement.h
        parser/ParserVariableDeclarationTest.cpp
        ../src/error/exceptions/parser/UninitializedConst.h
        ../src/interpreter/Environment.cpp
        ../src/interpreter/Environment.h
        ../src/parser/ast/expressions/AssignmentExpression.h
        ../src/error/exceptions/VariableRedeclaration.h
        ../src/error/exceptions/UndeclaredVariable.h
        ../src/error/exceptions/ConstReassignment.h
        environment/EnvironmentTest.cpp
        parser/ParserVariableExpressionTest.cpp
        parser/ParserAssignmentExpressionTest.cpp
        ../src/error/exceptions/parser/InvalidLValue.h
        interpreter/InterpreterVariableTest.cpp
        ../src/parser/ast/statements/BlockStatement.h
        parser/ParserBlockStatementTest.cpp
        interpreter/InterpreterBlockStatementTest.cpp
        ../src/parser/ast/statements/IfStatement.h
        parser/ParserIfStatementTest.cpp
        interpreter/InterpreterIfStatementTest.cpp
        ../src/parser/ast/statements/WhileStatement.h
        parser/ParserWhileStatementTest.cpp
        interpreter/InterpreterWhileStatementTest.cpp
        parser/ParserForStatementTest.cpp
        ../src/parser/ast/expressions/CallExpression.h
        parser/ParserFunctionCallTest.cpp
        ../src/parser/ast/statements/FunctionDeclarationStatement.h
        parser/ParserFunctionDeclarationTest.cpp
        ../src/error/exceptions/InvalidCall.h
        ../src/error/exceptions/TooManyArguments.h
        interpreter/InterpreterFunctionTest.cpp
        ../src/parser/ast/statements/ReturnStatement.h
        ../src/parser/Resolver.cpp
        ../src/parser/Resolver.h
        ../src/error/exceptions/parser/InvalidReturnPosition.h
        ../src/error/exceptions/parser/SelfReferencingInitializer.h
        parser/ParserIndexingOperatorTest.cpp
        ../src/parser/ast/expressions/IndexingExpression.h
        ../src/parser/ast/expressions/ArrayLiteralExpression.h
        ../src/parser/ast/expressions/IndexAssignmentExpression.h
        parser/ParserIndexAssignmentExpressionTest.cpp
        interpreter/InterpreterIndexingExpressionTest.cpp
        ../src/error/exceptions/IndexOutOfBounds.h
        ../src/error/exceptions/NonIntegerIndex.h
        ../src/error/exceptions/IndexingNonArray.h
        interpreter/InterpreterIndexAssignmentExpressionTest.cpp
        benchmarks/test.cpp
        interpreter/RuntimeValueStringificationTest.cpp
        interpreter/ValuePrintingTest.cpp
        ../src/interpreter/nativeFunctions/BaseFunctions.h
        ../src/interpreter/nativeFunctions/BaseFunctions.cpp
        ../src/interpreter/nativeFunctions/NativeFunction.h
        ../src/interpreter/nativeFunctions/NativeFunction.cpp
        ../src/error/printer/isOutputANSICompatible.cpp
        ../src/error/exceptions/TooFewArguments.h
)
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)